--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+body {
+    display: flex;
+    justify-content: center;
+}
+
 #list {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
+    margin: 0;
 }
 
 #list li {
@@ -10,4 +17,5 @@
     list-style: none;
     border: 1px solid black;
     border-radius: 10px;
+    width: 50vw;
 }
