--- a/src/index/index.css
+++ b/src/index/index.css
@@ -1,6 +1,8 @@
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(66, 66, 66);
 }
 
 #list {
@@ -11,11 +13,16 @@ body {
 }
 
 #list li {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     margin: 5px;
     padding: 5px;
     list-style: none;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 10px;
     width: 50vw;
+    background-color: rgb(100, 100, 100);
+    color: white;
 }
